--- a/frontend/api/src/css/style.css
+++ b/frontend/api/src/css/style.css
@@ -1,3 +1,16 @@
 .title {
     color: red;
 }
+
+.wrapper {
+    padding-top: 5rem;
+    margin: 0 auto;
+    width: 600px;
+}
+
+.rm {
+    background: red;
+    border-radius: 50%;
+    color: #fff;
+    border: none;
+}
